--- a/TP_EDA.ipynb
+++ b/TP_EDA.ipynb
@@ -1196,7 +1196,7 @@
         "players_per_country = players_per_country.reset_index()\n",
         "players_per_country.columns = ['country', 'players']\n",
         "figure_8 = sns.catplot(x='players', y='country' ,data=players_per_country.head(50),height=20,  kind=\"bar\")\n",
-        "figure_8 = plt.title(\"Country Wise Players Counts\",fontsize=25)\n",
+        "figure_8 = plt.title(\"Jugadores de fútbol por país\",fontsize=25)\n",
         "figure_8 = plt.yticks(fontsize=15)\n",
         "figure_8 = plt.xticks(fontsize=15)\n",
         "figure_8 = plt.grid()\n",
